--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_hms_gms_availability
 description: Flutter plugin to detect HMS and GMS availability. Always return False in iOS.
-version: 1.0.0
+version: 1.0.0-nullsafety.0
 homepage: https://github.com/trilobyte-my/flutter_hms_gms_availability
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
